syntax = "proto3";

package qr;

option go_package = "url-shorter/pkg/proto/qr";

//JWT Auth
service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
}

message RegisterRequest {
    string login = 1;
    string password = 2;
}

message RegisterResponse {
    bool success = 1;
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

